--- a/style.css
+++ b/style.css
@@ -44,8 +44,12 @@ h1 {
 button {
     margin: 2px;
     width: 50px;
-    background-color: rgb(33, 71, 98);
+    background-color: #214762;
     color: antiquewhite;
     font-size: 1.5em;
     border-style: none;
+}
+
+button:hover {
+    background-color: #547d9a;
 }
