--- a/style.css
+++ b/style.css
@@ -7,50 +7,42 @@
 }
 
 html {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #000000;
     color: antiquewhite;
 }
 
-h1 {
-    text-align: center;
-    margin-top: 100px;
-}
-
 #screen {
-    margin: 30px;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-top: 80px;
+    max-width: 218px;
     font-size: 2em;
     text-align: center;
     min-height: 50px;
 }
 
 #buttons-layout {
+    max-width: 227px;
     display: flex;
-    justify-content: center;
-}
-
-#number-buttons {
-    display: flex;
-    justify-content: center;
+    margin: auto;
     flex-wrap: wrap;
-    max-width: 200px;
-}
-
-#operator-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 100px;
 }
 
 button {
-    margin: 2px;
+    margin: 3px;
     width: 50px;
-    background-color: #214762;
+    height: 50px;
+    background-color: #2e2f31;
     color: antiquewhite;
     font-size: 1.5em;
     border-style: none;
 }
 
 button:hover {
-    background-color: #547d9a;
+    background-color: #311e11;
 }
+
+/* body * {
+    border: dotted grey;
+} */
