--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: DepartureMono Nerd Font, Arial, Helvetica, sans-serif;
     background-color: #000000;
     color: antiquewhite;
 }
@@ -17,9 +17,11 @@ html {
     margin-bottom: 10px;
     margin-top: 80px;
     max-width: 218px;
-    font-size: 1.5em;
-    text-align: center;
-    min-height: 50px;
+    font-size: 20px;
+    text-align: right;
+    height: 30px;
+    overflow: hidden;
+    word-break: break-all;
 }
 
 #buttons-layout {
@@ -37,12 +39,13 @@ button {
     color: antiquewhite;
     font-size: 1.5em;
     border-style: none;
+    
 }
 
 button:hover {
     background-color: #311e11;
 }
 
-/* body * {
+body * {
     border: dotted grey;
-} */
+}
