--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html {
     background-color: #c7c6c6;
 }
 
+/* MAKE OPERATOR COLOR DIFFERENT OF VALUES */
+
 #screen {
     margin: auto;
     padding: 0 5px;
@@ -21,7 +23,7 @@ html {
     background-color: #060606;
     font-size: 25px;
     font-family: DepartureMono Nerd Font, Arial, Helvetica;
-    color: rgb(236, 247, 255);
+    color: #ecf7ff;
     text-shadow: 
     0 0 4px #00a292,
     0 0 4px #3db6cb;
@@ -41,6 +43,8 @@ html {
 .separator {
     width: 15px;
 }
+
+/* MAYBE MAKE THE BUTTON'S HEIGHT SHORTER??? */
 
 button {
     z-index: 1;
@@ -96,20 +100,20 @@ button:active {
 
 #equal-button:active {
     box-shadow: 
-        0px 1px 1px #3b5678,
-        0px 2px 3px #344965,
-        0px 3px #2b3d55,
-        0px 4px black,
-        3px 3px 5px #63738f;
+        0px 1px 1px #3b5678,  /* soft border */
+        0px 2px 3px #344965,  /* button body first half */
+        0px 3px #2b3d55,      /* button body second half */
+        0px 4px black,        /* hole for button*/
+        3px 3px 5px #63738f;  /* stronger right shaddow */
 }
 
 #clear-button:active {
     box-shadow: 
-        0px 1px 1px #601f1f,
-        0px 2px 3px #531e13,
-        0px 3px #1d0a07,
-        0px 4px black,
-        3px 3px 5px #8c5252;
+        0px 1px 1px #601f1f,  /* soft border */
+        0px 2px 3px #531e13,  /* button body first half */
+        0px 3px #1d0a07,      /* button body second half */
+        0px 4px black,        /* hole for button*/
+        3px 3px 5px #8c5252;  /* stronger right shaddow */
 }
 
 /* body * {
