--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button {
     background-color: #ded8d4;
     color: rgb(84, 95, 100);
     font-size: 2.25em;
-    font-family: Helvetica, "Trebuchet MS" sans-serif;
+    font-family: Helvetica, "Trebuchet MS", sans-serif;
     border-style: none;
     border-radius: 7.5px;
     box-shadow:
