--- a/style.css
+++ b/style.css
@@ -12,46 +12,52 @@
 }
 
 body {
-    background-color: #c9c5c2;
+    background-color: #c6c3be;
     display: flex;
     justify-content: center;
 }
 
 #calc-frame {
+    margin: auto;
     margin-top: 100px;
     background-color: #bbb5ac;
-    height: 500px;
-    width: 470px;
+    height: 550px;
+    width: 480px;
     border-radius: 10px;
     box-shadow:
     0px 4px 2px #bbb5ac,   /* soft border */
-    0px 20px 50px #bbb5ac,   /* button body first half */
-    0px 40px #69615e,       /* button body second half */
-    10px 50px 15px #97867e,  /* stronger right shaddow */
-    30px -10px 50px #97867e,  /* stronger right shaddow */
-    -30px 30px 50px #ffffff;  /* stronger right shaddow */
+    0px 20px 50px #97928b,   /* button body first half */
+    0px 40px #7e736f,       /* button body second half */
+    10px 30px 15px #97867e,  /* stronger right shaddow */
+    30px -10px 50px #937a6e,  /* stronger right shaddow */
+    -30px 30px 50px #fef8f1;  /* left side reflection */
 }
 
 #message-text {
-    margin: 20px 50px 20px;
-    font-family: Helvetica, sans-serif;
-    font-weight: bold;
-    color: #404040;
+    margin: 12px 40px;
+    padding: 6px;
+    font-family: "Electrolize", system-ui;
+    font-size: 1.2em;
+    font-weight: 400;
+    color: #474747;
 }
 
 #screen-frame {
-    height: 105px;
+    height: 125px;
     width: 435px;
-    margin: 20px auto 15px;
+    margin: 30px auto 0px;
     display: flex;
     justify-content: center;
     background-color: #060606;
-    border-radius: 6px;
+    border: solid #d6cfc5;
+    border-width: 3px;
+    border-style: inset;
+    border-radius: 8px;
 }
 
 #screen {
-    margin-top: 30px;
-    width: 405px;
+    margin-top: 34px;
+    width: 380px;
     height: 51px;
     background-color: #060606;
     font-size: 38px;
